--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -3,9 +3,11 @@
 <link rel="import" href="../audit-display/audit-display.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../loading-overlay/loading-overlay.html">
 <link rel="import" href="../plain-text/plain-text.html">
+<link rel="import" href="../power-log/power-log.html">
 <link rel="import" href="../vm-data-model/vm-data-model.html">
 
 <dom-module id="vm-detail">
@@ -115,6 +117,18 @@
             </h1>
             <template is="dom-if" if="[[_showLogs]]" restamp>
               <audit-display vmid="[[_vm.vm.id]]"></audit-display>
+            </template>
+
+            <h1
+              class="section-toggle"
+              on-click="_togglePowerLog"
+              title$="[[_getSectionTooltip(_showPowerLog, 'Power Log')]]"
+              >
+              <iron-icon icon="[[_getSectionIcon(_showPowerLog)]]"></iron-icon>
+              Power Log
+            </h1>
+            <template is="dom-if" if="[[_showPowerLog]]" restamp>
+              <power-log vmid="[[_vm.vm.id]]"></power-log>
             </template>
           </div>
         </template>
