--- a/vimmasite/vimma/static/vimma/components/expiration-item/expiration-item.css
+++ b/vimmasite/vimma/static/vimma/components/expiration-item/expiration-item.css
@@ -3,8 +3,10 @@
 	position: relative;
 }
 
-paper-button#reload {
-	color: var(--paper-green-800);
+paper-icon-button#reload:hover {
+	color: var(--paper-green-700);
+	background: var(--paper-light-green-50);
+	border-radius: 50%;
 }
 
 paper-icon-button#extend {
