start vm basic details and show Destruction info

--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.css
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.css
@@ -87,3 +87,8 @@ h1.section-toggle:hover {
 	cursor: pointer;
 	color: var(--paper-blue-900);
 }
+
+div#destruction-details {
+	font-weight: bold;
+	color: var(--paper-amber-900);
+}
