--- a/vimmasite/vimma/static/vimma/components/equal-behavior/equal-behavior.html
+++ b/vimmasite/vimma/static/vimma/components/equal-behavior/equal-behavior.html
@@ -14,6 +14,16 @@ VimmaBehaviors.Equal = {
   // https://www.polymer-project.org/1.0/docs/devguide/data-binding.html#literals
   _null: function(x) {
     return this._equal(x, null);
+  },
+
+  _any: function() {
+    var i;
+    for (i = 0; i < arguments.length; i++) {
+      if (arguments[i]) {
+        return true;
+      }
+    }
+    return false;
   }
 };
 </script>
