AWS: store the vms' Private IP address

--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
@@ -19,6 +19,10 @@
           <td>[[vm.aws_vm.ip_address]]</td>
         </tr>
         <tr>
+          <td>Private IP</td>
+          <td>[[vm.aws_vm.private_ip_address]]</td>
+        </tr>
+        <tr>
           <td>AWS State</td>
           <td>[[vm.aws_vm.state]]</td>
         </tr>
