--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
@@ -5,7 +5,7 @@
 
 <dom-module id="aws-vm-basic-details">
   <link rel="import" type="css" href="../../css/component-common.css">
-  <link rel="import" type="css" href="aws-vm-basic-details.css">
+  <link rel="import" type="css" href="detail-tables.css">
 
   <template>
     <div class="item">
