remove header margins in <create-{vm|schedule}> and <vm-list>

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm.css
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm.css
@@ -17,6 +17,10 @@ div#expanded {
 	color: var(--paper-grey-700);
 }
 
+div#expanded > h1 {
+	margin: 0;
+}
+
 table#form label {
 	font-weight: bold;
 }
