--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
 <link rel="import" href="../audit-display/audit-display.html">
+<link rel="import" href="../aws-firewall-rules/aws-firewall-rules.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -187,6 +188,31 @@
               <expiration-item
                 expid="[[_vm.expiration.id]]"
                 ></expiration-item>
+            </template>
+
+            <h1
+              class="section-toggle"
+              on-click="_toggleFirewallRules"
+              title$="[[_getSectionTooltip(_showFirewallRules, 'Firewall Rules')]]"
+              >
+              <iron-icon
+                icon="[[_getSectionIcon(_showFirewallRules)]]"></iron-icon>
+              Firewall Rules
+            </h1>
+            <template is="dom-if" if="[[_showFirewallRules]]" restamp>
+              <template is="dom-if" restamp
+                if="[[_equal(_vm.provider.type, 'dummy')]]">
+                Dummy VMs have no firewall rules.
+              </template>
+
+              <template is="dom-if" restamp
+                if="[[_equal(_vm.provider.type, 'aws')]]">
+                <aws-firewall-rules vmid="[[_vm.vm.id]]"></aws-firewall-rules>
+              </template>
+
+              <template is="dom-if" if="[[_unknownVMType(_vm.provider.type)]]">
+                Unknown VM type: <span>[[_vm.provider.type]]</span>.
+              </template>
             </template>
 
             <h1
