Set soon-to-expire color to different than expired.

--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.css
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.css
@@ -72,6 +72,10 @@ span#smr-expiry:hover {
 }
 
 span#smr-expiry.expires-soon {
+	color: var(--paper-orange-500);
+}
+
+span#smr-expiry.expires-expired {
 	color: var(--paper-red-500);
 }
 
