Color code expiration-item component date display

--- a/vimmasite/vimma/static/vimma/components/expiration-item/expiration-item.css
+++ b/vimmasite/vimma/static/vimma/components/expiration-item/expiration-item.css
@@ -20,3 +20,11 @@ paper-icon-button#extend:hover {
 paper-dialog#dialog {
 	position: absolute;
 }
+
+:host(.expires-soon) local-date {
+	color: var(--paper-orange-500);
+}
+
+:host(.expires-expired) local-date {
+	color: var(--paper-red-500);
+}
