Small visual improvements

--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-advanced-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-advanced-details.html
@@ -12,7 +12,7 @@
           <td>[[vm.aws_vm.instance_id]]</td>
         </tr>
         <tr>
-          <td>Security Group</td>
+          <td>Security group</td>
           <td>[[vm.aws_vm.security_group_id]]</td>
         </tr>
       </table>
