--- a/vimmasite/vimma/static/vimma/components/vm-detail/dummy-vm-basic-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/dummy-vm-basic-details.html
@@ -15,7 +15,7 @@
           <td>[[_getName(vm)]]</td>
         </tr>
         <tr>
-          <td>Provider State</td>
+          <td>Provider state</td>
           <td>[[vm.dummy_vm.status]]</td>
         </tr>
         <tr>
