--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
@@ -23,7 +23,7 @@
           <td>[[vm.aws_vm.private_ip_address]]</td>
         </tr>
         <tr>
-          <td>AWS State</td>
+          <td>AWS state</td>
           <td>[[vm.aws_vm.state]]</td>
         </tr>
         <tr>
