move 3rd party static assets outside project for livereload support

--- a/vimmasite/vimma/static/vimma/components/ajax-load/ajax-load.html
+++ b/vimmasite/vimma/static/vimma/components/ajax-load/ajax-load.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
-<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/static/bower_components/iron-ajax/iron-ajax.html">
 
 <!--
   Load AJAX data and expose the result (data) and state (loading, error)
