--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm-dummy-data.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm-dummy-data.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
-<link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="/static/bower_components/paper-input/paper-input.html">
 
 <dom-module id="create-vm-dummy-data">
   <template>
