--- a/vimmasite/vimma/static/vimma/components/loading-overlay/loading-overlay.html
+++ b/vimmasite/vimma/static/vimma/components/loading-overlay/loading-overlay.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/static/bower_components/paper-spinner/paper-spinner.html">
 
 <!--
   Cover its parent with a grey, semi-transparent box with a loading indicator
