--- a/vimmasite/vimma/static/vimma/components/local-date/local-date.html
+++ b/vimmasite/vimma/static/vimma/components/local-date/local-date.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <!--
   Display a date-time as ‘YYYY-MM-DD HH:MM:SS[.mmm]’ in the browser's timezone
