--- a/vimmasite/vimma/static/vimma/components/show-count/show-count.html
+++ b/vimmasite/vimma/static/vimma/components/show-count/show-count.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <!--
   Show "1 cat" or "3 cats". ‘many’ is optional and defaults to ‘one’s.
