--- a/vimmasite/vimma/static/vimma/components/user-name/user-name.html
+++ b/vimmasite/vimma/static/vimma/components/user-name/user-name.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <link rel="import" href="../ajax-load/ajax-load.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/static/bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../equal-behavior/equal-behavior.html">
 <link rel="import" href="../plain-text/plain-text.html">
 
