--- a/vimmasite/vimma/static/vimma/components/api-loader/api-loader.html
+++ b/vimmasite/vimma/static/vimma/components/api-loader/api-loader.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <!--
   Loads all objects from a Vimma API endpoint, following all pages to end.
