--- a/vimmasite/vimma/static/vimma/components/aws-firewall-rules/aws-firewall-rules.html
+++ b/vimmasite/vimma/static/vimma/components/aws-firewall-rules/aws-firewall-rules.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/static/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="/static/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/static/bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="/static/bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../create-aws-firewall-rule/create-aws-firewall-rule.html">
 <link rel="import" href="../expiration-item/expiration-item.html">
 <link rel="import" href="../loading-overlay/loading-overlay.html">
