--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <link rel="import" href="../audit-display/audit-display.html">
-<link rel="import" href="../bower_components/paper-styles/paper-styles.html">
-<link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
-<link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="/static/bower_components/paper-styles/paper-styles.html">
+<link rel="import" href="/static/bower_components/paper-tabs/paper-tab.html">
+<link rel="import" href="/static/bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../equal-behavior/equal-behavior.html">
 <link rel="import" href="../frag-history/frag-history.html">
 <link rel="import" href="../frag-split/frag-split.html">
