--- a/vimmasite/vimma/static/vimma/components/local-date/test/local-date-tests.html
+++ b/vimmasite/vimma/static/vimma/components/local-date/test/local-date-tests.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Tests</title>
 
-    <script src="../../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-    <script src="../../bower_components/web-component-tester/browser.js"></script>
+    <script src="/static/bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="/static/bower_components/web-component-tester/browser.js"></script>
 
     <link rel="import" href="../local-date.html">
   </head>
