--- a/vimmasite/vimma/static/vimma/components/plain-text/plain-text.html
+++ b/vimmasite/vimma/static/vimma/components/plain-text/plain-text.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <!--
   Show ‘text’ as plain-text and toggle between preview/full on click
