--- a/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
@@ -1,14 +1,14 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <link rel="import" href="../ajax-load/ajax-load.html">
 <link rel="import" href="../api-loader/api-loader.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
-<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="/static/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="/static/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/static/bower_components/paper-button/paper-button.html">
+<link rel="import" href="/static/bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="/static/bower_components/paper-input/paper-input.html">
+<link rel="import" href="/static/bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/static/bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../equal-behavior/equal-behavior.html">
 <link rel="import" href="../loading-overlay/loading-overlay.html">
 <link rel="import" href="../plain-text/plain-text.html">
