--- a/vimmasite/vimma/static/vimma/components/test/index.html
+++ b/vimmasite/vimma/static/vimma/components/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tests</title>
 
-    <script src="../bower_components/web-component-tester/browser.js"></script>
+    <script src="/static/bower_components/web-component-tester/browser.js"></script>
   </head>
 
   <body>
