--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-advanced-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-advanced-details.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <dom-module id="aws-vm-advanced-details">
   <link rel="import" type="css" href="../../css/component-common.css">
