--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-basic-details.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
 <link rel="import" href="../local-date/local-date.html">
 <link rel="import" href="../user-name/user-name.html">
