--- a/vimmasite/vimma/static/vimma/components/vm-list/vm-list.html
+++ b/vimmasite/vimma/static/vimma/components/vm-list/vm-list.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="/static/bower_components/polymer/polymer.html">
 
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="/static/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="/static/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/static/bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="/static/bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../equal-behavior/equal-behavior.html">
 <link rel="import" href="../frag-split/frag-split.html">
 <link rel="import" href="../local-date/local-date.html">
