--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -17,11 +17,11 @@
   <!-- Fonts -->
   <link href='//fonts.googleapis.com/css?family=Roboto:400,700|Roboto+Mono:400,700|Roboto+Slab:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-  <script src="{% static 'vimma/components/bower_components/webcomponentsjs/webcomponents-lite.min.js' %}"></script>
+  <script src="{% static 'bower_components/webcomponentsjs/webcomponents-lite.min.js' %}"></script>
 
-  <script src="{% static 'vimma/components/bower_components/jquery/dist/jquery.min.js' %}"></script>
-  <script src="{% static 'vimma/components/bower_components/jquery.cookie/jquery.cookie.js' %}"></script>
-  <script src="{% static 'vimma/components/bower_components/highcharts/highcharts.js' %}"></script>
+  <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+  <script src="{% static 'bower_components/jquery.cookie/jquery.cookie.js' %}"></script>
+  <script src="{% static 'bower_components/highcharts/highcharts.js' %}"></script>
 
   <script src="{% static 'vimma/js/index.js' %}"></script>
 
