--- a/ui/components/vimma-behaviors/vimma-behaviors.html
+++ b/ui/components/vimma-behaviors/vimma-behaviors.html
@@ -1,4 +1,9 @@
 <script>
 // Create a namespace for Vimma Behaviors.
 VimmaBehaviors = {};
+VimmaBehaviors.django = {
+  csrftoken: function() {
+    return $.cookie('csrftoken');
+  }
+};
 </script>
