--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -3,3 +3,11 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: block;
+}
